Fix fullscreen components overlap

--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 h1 {
-  margin-top: 5%;
-  margin-bottom: -20%;
+  margin: 0;
+  padding: 0;
+  line-height: 1;
+  font-size: 2rem;
 }
 
 h1, h2, p {
@@ -12,9 +14,33 @@ p {
   font-weight: bold;
 }
 
+footer {
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  position: fixed;
+  background: rgba(58, 34, 2, 0.1);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0px 20px;
+  box-sizing: border-box;
+  color: white;
+  height: 80px;
+}
+
+footer a {
+  color: white;
+  font-size: x-large;
+}
+
+footer a:hover {
+  color: grey;
+}
+
 .rock, .paper, .scissors, .computer-choice {
   position: relative;
-  width: 20%;
+  width: 20vh;
   color: white;
   background-color: rgba(0,0,0,0.5);
   border: solid white 2px;
@@ -43,36 +69,6 @@ p {
   height: 80%;
 }
 
-footer {
-  width: 100%;
-  bottom: 0;
-  left: 0;
-  position: fixed;
-  background: rgba(58, 34, 2, 0.1);
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0px 20px;
-  box-sizing: border-box;
-  color: white;
-  height: 80px;
-}
-
-footer a {
-  color: white;
-  font-size: x-large;
-}
-
-footer a:hover {
-  color: grey;
-}
-
-/* @media screen and (max-width: 949px) {
-  footer {
-    display: none;
-  }
-} */
-
 .container {
   height: 100%;
   width: 100%;
@@ -82,6 +78,8 @@ footer a:hover {
   bottom: 0;
   position: absolute;
   display: flex;
+  justify-content: center;
+  align-items: center;
   gap: 10%;
   flex-direction: column;
 
@@ -115,8 +113,8 @@ footer a:hover {
 }
 
 .wrapper {
-  height: 100%;
   width: 100%;
+  height: 70%;
   display: flex;
   flex-direction: column;
   justify-content: center;
